==> darren1713/elua/src/platform/avr32/platform.c <==
#include "platform.h"
#include "type.h"
#include "devman.h"
#include "genstd.h"
#include "stacks.h"
#include <reent.h>
#include <errno.h>
#include <string.h>
#include <ctype.h>
#include <stdio.h>
#include "utils.h"
#include "elua_adc.h"
#include "platform_conf.h"
#include "common.h"
#include "buf.h"
#include "diskio.h"
#include "ethernet.h"
#include "uip_arp.h"
#include "elua_uip.h"
#include "uip-conf.h"
#include <avr32/io.h>
#include "compiler.h"
#include "flashc.h"
#include "pm.h"
#include "board.h"
#include "usart.h"
#include "gpio.h"
#include "tc.h"
#include "intc.h"
#include "spi.h"
#include "adc.h"
#include "pwm.h"
#include "i2c.h"
#include "usb-cdc.h"
#define SYSTICKHZ VTMR_FREQ_HZ
#define SYSTICKMS (1000 / SYSTICKHZ)
#define SYSTIMER_PWM_CH       6

int platform_init()
{
  pm_freq_param_t pm_freq_param =
  {
    REQ_CPU_FREQ,
    REQ_PBA_FREQ,
    FOSC0,
    OSC0_STARTUP,
  };
  tc_waveform_opt_t tmropt =
  {
    .waveform.bswtrg = TC_EVT_EFFECT_NOOP, // Software trigger effect on TIOB.
    .waveform.beevt  = TC_EVT_EFFECT_NOOP, // External event effect on TIOB.
    .waveform.bcpc   = TC_EVT_EFFECT_NOOP, // RC compare effect on TIOB.
    .waveform.bcpb   = TC_EVT_EFFECT_NOOP, // RB compare effect on TIOB.

    .waveform.aswtrg = TC_EVT_EFFECT_NOOP, // Software trigger effect on TIOA.
    .waveform.aeevt  = TC_EVT_EFFECT_NOOP, // External event effect on TIOA.
    .waveform.acpc   = TC_EVT_EFFECT_NOOP, // RC compare effect on TIOA: toggle.
    .waveform.acpa   = TC_EVT_EFFECT_NOOP, // RA compare effect on TIOA: toggle (other possibilities are none, set and clear).

    .waveform.wavsel = TC_WAVEFORM_SEL_UP_MODE, // Waveform selection: Up mode
    .waveform.enetrg = FALSE,              // External event trigger enable.
    .waveform.eevt   = 0,                  // External event selection.
    .waveform.eevtedg= TC_SEL_NO_EDGE,     // External event edge selection.
    .waveform.cpcdis = FALSE,              // Counter disable when RC compare.
    .waveform.cpcstop= FALSE,              // Counter clock stopped with RC compare.

    .waveform.burst  = FALSE,              // Burst signal selection.
    .waveform.clki   = FALSE,              // Clock inversion.
    .waveform.tcclks = TC_CLOCK_SOURCE_TC1 // Internal source clock 1 (32768Hz)
  };
  volatile avr32_tc_t *tc = &AVR32_TC;
  unsigned i;

  Disable_global_interrupt();
  INTC_init_interrupts();

  // Setup clocks
  if( PM_FREQ_STATUS_FAIL == pm_configure_clocks( &pm_freq_param ) )
    return PLATFORM_ERR;
#ifdef FOSC32
  // Select the 32-kHz oscillator crystal
  pm_enable_osc32_crystal (&AVR32_PM );
  // Enable the 32-kHz clock
  pm_enable_clk32_no_wait( &AVR32_PM, AVR32_PM_OSCCTRL32_STARTUP_0_RCOSC );
#endif

#ifdef BUILD_USB_CDC
  pm_configure_usb_clock();
#endif

  // Initialize external memory if any.
#ifdef AVR32_SDRAMC
# ifndef BOOTLOADER_EMBLOD
  sdramc_init( REQ_CPU_FREQ );
# endif
#endif

  // Setup timers
  for( i = 0; i < 3; i ++ )
  {
    tc_init_waveform( tc, i, &tmropt );
#ifndef FOSC32
    // At reset, timers run from the 32768Hz crystal. If there is no such clock
    // then run them all at the lowest frequency available (PBA_FREQ / 128)
    platform_timer_set_clock( i, REQ_PBA_FREQ / 128 );
#endif
  }

#ifdef BUILD_ADC
  (&AVR32_ADC)->ier = AVR32_ADC_DRDY_MASK;
  INTC_register_interrupt( &adc_int_handler, AVR32_ADC_IRQ, AVR32_INTC_INT0);

  for( i = 0; i < NUM_ADC; i++ )
    adc_init_ch_state( i );
#endif

#if NUM_PWM > 0
  pwm_init();
#endif

#ifdef BUILD_UIP
  platform_ethernet_setup();
#endif

#ifdef ELUA_BOARD_MIZAR32
  // If BUF_ENABLE_UART is enabled on Mizar32 (which it is by default) but the
  // serial board is not plugged in, we get an infinite number of interrupts
  // due to the RX pin picking up electrical noise and crashing the board.
  // We avoid this by enabling the internal pull-up resistor on that pin
  // before the UART interrupt is enabled.
  // UART0 RX pin is on GPIO port A pin 0, hence port 0, pin mask (1 << 0)
  platform_pio_op( 0, ( pio_type )1 << 0 , PLATFORM_IO_PIN_PULLUP );
#endif

  // Setup system timer
  // NOTE: this MUST come AFTER pwm_init!
  cmn_systimer_set_base_freq( 1000000 );
  cmn_systimer_set_interrupt_freq( 1 );
  platform_systimer_init();

  // Setup virtual timers if needed
#if VTMR_NUM_TIMERS > 0
  platform_cpu_set_interrupt( INT_TMR_MATCH, VTMR_CH, PLATFORM_CPU_ENABLE );
  platform_timer_set_match_int( VTMR_CH, 1000000 / VTMR_FREQ_HZ, PLATFORM_TIMER_INT_CYCLIC );
#endif // #if VTMR_NUM_TIMERS > 0

#ifdef BUILD_USB_CDC
  usb_init();
#endif

  cmn_platform_init();

  // All done
  return PLATFORM_OK;
}

pio_type platform_pio_op( unsigned port, pio_type pinmask, int op )
{
  pio_type retval = 1;

  // Pointer to the register set for this GPIO port
  volatile avr32_gpio_port_t *gpio_regs = &AVR32_GPIO.port[ port ];

  switch( op )
  {
    case PLATFORM_IO_PORT_SET_VALUE:
      gpio_regs->ovr = pinmask;
      break;

    case PLATFORM_IO_PIN_SET:
      gpio_regs->ovrs = pinmask;
      break;

    case PLATFORM_IO_PIN_CLEAR:
      gpio_regs->ovrc = pinmask;
      break;

    case PLATFORM_IO_PORT_DIR_INPUT:
      pinmask = 0xFFFFFFFF;
    case PLATFORM_IO_PIN_DIR_INPUT:
      gpio_regs->oderc = pinmask;  // Disable output drivers
      gpio_regs->gpers = pinmask;  // Make GPIO control this pin
      break;

    case PLATFORM_IO_PORT_DIR_OUTPUT:
      pinmask = 0xFFFFFFFF;
    case PLATFORM_IO_PIN_DIR_OUTPUT:
      gpio_regs->oders = pinmask;  // Enable output drivers
      gpio_regs->gpers = pinmask;  // Make GPIO control this pin
      break;

    case PLATFORM_IO_PORT_GET_VALUE:
      retval = gpio_regs->pvr;
      break;

    case PLATFORM_IO_PIN_GET:
      retval = gpio_regs->pvr & pinmask ? 1 : 0;
      break;

    case PLATFORM_IO_PIN_PULLUP:
      gpio_regs->puers = pinmask;
      break;

    case PLATFORM_IO_PIN_NOPULL:
      gpio_regs->puerc = pinmask;
      break;

    default:
      retval = 0;
  }
  return retval;
}

u32 platform_uart_setup( unsigned id, u32 baud, int databits, int parity, int stopbits )
{
  volatile avr32_usart_t *pusart = ( volatile avr32_usart_t* )uart_base_addr[ id ];
  usart_options_t opts;

  opts.channelmode = USART_NORMAL_CHMODE;
  opts.charlength = databits;
  opts.baudrate = baud;

  if( id == CDC_UART_ID )
    return 0;  

  // Set stopbits
#if PLATFORM_UART_STOPBITS_1 == USART_1_STOPBIT && \
    PLATFORM_UART_STOPBITS_1_5 == USART_1_5_STOPBIT && \
    PLATFORM_UART_STOPBITS_2 == USART_2_STOPBIT
  // The AVR32 header values and the eLua values are the same (0, 1, 2)
  if (stopbits > PLATFORM_UART_STOPBITS_2) return 0;
  opts.stopbits = stopbits;
#else
  switch (stopbits) {
  case PLATFORM_UART_STOPBITS_1:
    opts.stopbits = USART_1_STOPBIT;
    break;
  case PLATFORM_UART_STOPBITS_1_5:
    opts.stopbits = USART_1_5_STOPBITS;
    break;
  case PLATFORM_UART_STOPBITS_2:
    opts.stopbits = USART_2_STOPBITS;
    break;
  default:
    return 0;
  }
#endif

  // Set parity
  switch (parity) {
  case PLATFORM_UART_PARITY_EVEN:
    opts.paritytype = USART_EVEN_PARITY;
    break;
  case PLATFORM_UART_PARITY_ODD:
    opts.paritytype = USART_ODD_PARITY;
    break;
  case PLATFORM_UART_PARITY_SPACE:
    opts.paritytype = USART_SPACE_PARITY;
    break;
  case PLATFORM_UART_PARITY_MARK:
    opts.paritytype = USART_MARK_PARITY;
    break;
  case PLATFORM_UART_PARITY_NONE:
    opts.paritytype = USART_NO_PARITY;
    break;
  default:
    return 0;
  }

  // Set actual interface
  gpio_enable_module(uart_pins + id * 2, 2 );
  if ( usart_init_rs232( pusart, &opts, REQ_PBA_FREQ ) != USART_SUCCESS )
    return 0;

  // Return actual baud here
  return usart_get_async_baudrate(pusart, REQ_PBA_FREQ);
}

void platform_s_uart_send( unsigned id, u8 data )
{
  volatile avr32_usart_t *pusart = ( volatile avr32_usart_t* )uart_base_addr[ id ];

#ifdef BUILD_USB_CDC
  if( id == CDC_UART_ID )
    avr32_usb_cdc_send( data );
  else
#endif
  {
    while( !usart_tx_ready( pusart ) );
    pusart->thr = ( data << AVR32_USART_THR_TXCHR_OFFSET ) & AVR32_USART_THR_TXCHR_MASK;
  }
}

int platform_s_uart_recv( unsigned id, timer_data_type timeout )
{
  volatile avr32_usart_t *pusart = ( volatile avr32_usart_t* )uart_base_addr[ id ];
  int temp;

#ifdef BUILD_USB_CDC
  if( id == CDC_UART_ID )
    return avr32_usb_cdc_recv( timeout );
#endif

  if( timeout == 0 )
  {
    if( usart_read_char( pusart, &temp ) != USART_SUCCESS )
      return -1;
    else
      return temp;
  }
  else
    return usart_getchar( pusart );
}

static u32 platform_timer_get_clock( unsigned id )
{
  volatile avr32_tc_t *tc = &AVR32_TC;
  unsigned int clksel = tc->channel[ id ].CMR.waveform.tcclks;

#ifdef FOSC32
  return clksel == 0 ? FOSC32 : REQ_PBA_FREQ / clkdivs[ clksel ];
#else
  return REQ_PBA_FREQ / clkdivs[ clksel ];
#endif
}

static u32 platform_timer_set_clock( unsigned id, u32 clock )
{
  unsigned i, mini;
  volatile avr32_tc_t *tc = &AVR32_TC;
  volatile unsigned long *pclksel = &tc->channel[ id ].cmr;

#ifdef FOSC32
  for( i = mini = 0; i < 5; i ++ )
    if( ABSDIFF( clock, i == 0 ? FOSC32 : REQ_PBA_FREQ / clkdivs[ i ] ) <
        ABSDIFF( clock, mini == 0 ? FOSC32 : REQ_PBA_FREQ / clkdivs[ mini ] ) )
      mini = i;
  *pclksel = ( *pclksel & ~0x07 ) | mini;
  return mini == 0 ? FOSC32 : REQ_PBA_FREQ / clkdivs[ mini ];
#else
  // There is no 32768Hz clock so choose from the divisors of PBA.
  for( i = mini = 1; i < 5; i ++ )
    if( ABSDIFF( clock, REQ_PBA_FREQ / clkdivs[ i ] ) <
        ABSDIFF( clock, REQ_PBA_FREQ / clkdivs[ mini ] ) )
      mini = i;
  *pclksel = ( *pclksel & ~0x07 ) | mini;
  return REQ_PBA_FREQ / clkdivs[ mini ];
#endif
}

void platform_s_timer_delay( unsigned id, timer_data_type delay_us )
{
  volatile avr32_tc_t *tc = &AVR32_TC;
  u32 freq;
  timer_data_type final;
  volatile int i;
  volatile const avr32_tc_sr_t *sr = &tc->channel[ id ].SR;

  freq = platform_timer_get_clock( id );
  final = ( ( u64 )delay_us * freq ) / 1000000;
  if( final > 0xFFFF )
    final = 0xFFFF;
  tc_start( tc, id );
  i = sr->covfs;
  for( i = 0; i < 200; i ++ );
  while( ( tc_read_tc( tc, id ) < final ) && !sr->covfs );
}

timer_data_type platform_s_timer_op( unsigned id, int op, timer_data_type data )
{
  u32 res = 0;
  volatile int i;
  volatile avr32_tc_t *tc = &AVR32_TC;

  switch( op )
  {
    case PLATFORM_TIMER_OP_START:
      res = 0;
      tc_start( tc, id );
      for( i = 0; i < 200; i ++ );
      break;

    case PLATFORM_TIMER_OP_READ:
      res = tc_read_tc( tc, id );
      break;

    case PLATFORM_TIMER_OP_SET_CLOCK:
      res = platform_timer_set_clock( id, data );
      break;

    case PLATFORM_TIMER_OP_GET_CLOCK:
      res = platform_timer_get_clock( id );
      break;

    case PLATFORM_TIMER_OP_GET_MAX_CNT:
      res = 0xFFFF;
      break;
  }
  return res;
}

u64 platform_timer_sys_raw_read()
{
  return AVR32_PWM.channel[ SYSTIMER_PWM_CH ].ccnt;
}

void platform_timer_sys_disable_int()
{
  AVR32_PWM.idr = 1 << SYSTIMER_PWM_CH;
}

void platform_timer_sys_enable_int()
{
  AVR32_PWM.ier = 1 << SYSTIMER_PWM_CH;
}

int platform_adc_update_sequence( )
{
  elua_adc_dev_state *d = adc_get_dev_state( 0 );

  adc->cr = AVR32_ADC_SWRST_MASK;
  adc->ier = AVR32_ADC_DRDY_MASK;

  adc_configure( adc );

  d->seq_ctr = 0;
  while( d->seq_ctr < d->seq_len )
  {
    adc_enable( adc, d->ch_state[ d->seq_ctr ]->id );
    gpio_enable_module( adc_pins + d->ch_state[ d->seq_ctr ]->id, 1 );
    d->seq_ctr++;
  }
  d->seq_ctr = 0;

  return PLATFORM_OK;
}

u32 platform_pwm_setup( unsigned id, u32 frequency, unsigned duty )
{
  u32 pwmclk;        // base clock frequency for PWM counters
  u32 period;        // number of base clocks per cycle
  u32 duty_cycle;    // number of base clocks to be high (low?) for

  // Sanity checks
  if (id >= NUM_PWM || duty > 100)
    return 0;    // Returning an actual frequency of 0 should worry them!

  gpio_enable_module(pwm_pins + id, 1 );

  pwmclk = pwm_get_clock_freq();

  // Compute period and duty period in clock cycles.
  //
  // PWM output wave frequency is requested in Hz but programmed as a
  // number of cycles of the master PWM clock frequency.
  //
  // Here, we use rounding to select the numerically closest available
  // frequency and return the closest integer in Hz to that.

  period = (pwmclk + frequency/2) / frequency;
  if (period == 0) period = 1;
  if (period >= 1<<20) period = (1<<20) - 1;
  duty_cycle = (period * duty + 50) / 100;

  // The AVR32 PWM duty cycle is upside down:
  // duty_period==0 gives an all-active output, while
  // duty_period==period gives an all-inactive output.
  // So we invert the duty cycle here.
  pwm_channel_set_period_and_duty_cycle( id, period, period - duty_cycle );

  return (pwmclk + period/2) / period;
}

u32 platform_pwm_set_clock( unsigned id, u32 freq )
{
  unsigned pre, div;

  pwm_find_clock_configuration( freq, &pre, &div );
  pwm_set_linear_divider( pre, div );

  return pwm_get_clock_freq();
}
